--- a/manuscript/page-15/style.css
+++ b/manuscript/page-15/style.css
@@ -7,7 +7,7 @@
     left: -0.75vw;
     top: -0.75vw;
     width: 22.5vw;
-    background-image: url('https://raw.githubusercontent.com/kanishkrai/donald-trump/master/assets/images/astroupma.jpg');
+    background-image: url('https://raw.githubusercontent.com/kanishkrai/virat-kohli/master/assets/images/ashish.jpeg');
     background-size: cover;
 }
 
